--- a/style.css
+++ b/style.css
@@ -11,6 +11,12 @@ body {
     background-color: #f7c1fe;
 }
 
+.th {
+    font-family: "Kanit", sans-serif;
+    font-weight: 300;
+    font-style: normal;
+    letter-spacing: -0.3px;
+}
 .card-wrapper {
     perspective: 1000px;
     transform: rotate(-90deg);
@@ -105,6 +111,15 @@ body {
 }
 .card-body p+p {
     margin-top: 10px;
+}
+
+.card-footer p{
+    font-family: "Shantell Sans", serif;
+    position: absolute;
+    bottom: 8px;
+    right: 8px;
+    font-size: 8px;
+    font-weight: 300;
 }
 
 /* Envelope styling */
