--- a/pin.css
+++ b/pin.css
@@ -51,6 +51,12 @@
     font-weight: 500;
     cursor: pointer;
     transition: 0.2s ease-out;
+    -webkit-tap-highlight-color: transparent;
+}
+
+a{
+    -webkit-tap-highlight-color: transparent;
+
 }
 
 .keys button span {
