--- a/style.css
+++ b/style.css
@@ -135,6 +135,7 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
     box-shadow: 0 0 0 1px #000;
+    -webkit-tap-highlight-color: transparent;
 }
 
 .envelope::after {
